--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,7 @@ body {
   background-color: #222;
   margin: 0;
   font-family: Helvetica, sans-serif;
-  overflow: hidden;
+  color: #ddd;
 }
 
 a {
@@ -96,6 +96,22 @@ button:active {
   background-color: rgba(0, 255, 255, 0.75);
 }
 
-#menu > button {
+#menu button {
   text-transform: uppercase;
+}
+
+.centered-text {
+    text-align: center;
+}
+
+h2, h3 {
+    text-align: center;
+}
+
+h2 {
+    font-size: 3rem;
+}
+
+h3 {
+    font-size: 2.5rem;
 }
